k8s/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-rest
spec:
  externalIPs:
  - 169.xx.xx.xxx # public IP of the server
  type: NodePort
  ports:
  - name: firewalld
    protocol: TCP
    port: 8081
    targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-rest
subsets:
  - addresses:
      - ip: 10.xx.xx.xx #private IP of server
    ports:
      - port: 8080
        name: firewalld
