k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-rest #external-rest-2 for 2nd machine and so on
spec:
  ports:
  - name: firewalld
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-rest #external-rest-2 for 2nd machine and so on
subsets:
  - addresses:
      - ip: 10.xx.xx.xx #private IP of node
    ports:
      - port: 8080
        name: firewalld
