k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: firewalld-ingress
 #Remove annotations block in case you don't want to use SSL using letsenrypt
 annotations:
   kubernetes.io/ingress.class: "nginx"
   cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
 rules:
 - host: <your-host-name>
   http:
    #different paths for different hosts under the same k8s config
     paths:
     - path: /m1
       backend:
         serviceName: external-rest
         servicePort: 80
     - path: /m2
       backend:
         serviceName: external-rest-2
         servicePort: 80
     - path: /m3
       backend:
         serviceName: external-rest-3
         servicePort: 80
#Remove TLS block in case you don't want to use SSL
 tls:
 - secretName: "host1-tls"
   hosts:
   - <your-host-name>
